force-app/main/default/objects/eCard_Part_Shortage__x/eCard_Part_Shortage__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$part_shortage</externalName>
    <label>eCard_Part_Shortage</label>
    <pluralLabel>eCard_Part_Shortages</pluralLabel>
</CustomObject>