force-app/main/default/objects/eCard_Part_Shortage__x/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <description>Buyer</description>
    <externalDeveloperName>Buyer</externalDeveloperName>
    <label>Buyer</label>
    <length>254</length>
    <type>Text</type>
</CustomField>