force-app/main/default/objects/eCard_Part_Shortage__x/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Carrier</description>
    <externalDeveloperName>Carrier</externalDeveloperName>
    <label>Carrier</label>
    <length>254</length>
    <type>Text</type>
</CustomField>