force-app/main/default/objects/eCard_Part_Shortage__x/fields/Carrier_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Arrival_Time__c</fullName>
    <description>Carrier_Arrival_Time</description>
    <externalDeveloperName>Carrier_Arrival_Time</externalDeveloperName>
    <label>Carrier_Arrival_Time</label>
    <length>254</length>
    <type>Text</type>
</CustomField>