force-app/main/default/objects/eCard_Part_Shortage__x/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>Cause</description>
    <externalDeveloperName>Cause</externalDeveloperName>
    <label>Cause</label>
    <length>200</length>
    <type>Text</type>
</CustomField>