force-app/main/default/objects/eCard_Part_Shortage__x/fields/Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number__c</fullName>
    <description>Chassis_Number</description>
    <externalDeveloperName>Chassis_Number</externalDeveloperName>
    <label>Chassis_Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>