force-app/main/default/objects/eCard_Part_Shortage__x/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Created_Date</description>
    <externalDeveloperName>Created_Date</externalDeveloperName>
    <label>Created_Date</label>
    <type>DateTime</type>
</CustomField>