force-app/main/default/objects/eCard_Part_Shortage__x/fields/Current_Workcenter__c.field-meta.xml
<CustomField>
    <fullName>Current_Workcenter__c</fullName>
    <description>Current_Workcenter</description>
    <externalDeveloperName>Current_Workcenter</externalDeveloperName>
    <label>Current_Workcenter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>