force-app/main/default/objects/eCard_Part_Shortage__x/fields/Custom_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Part_Name__c</fullName>
    <description>Custom_Part_Name</description>
    <externalDeveloperName>Custom_Part_Name</externalDeveloperName>
    <label>Custom_Part_Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>