force-app/main/default/objects/eCard_Part_Shortage__x/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Date_Received</description>
    <externalDeveloperName>Date_Received</externalDeveloperName>
    <label>Date_Received</label>
    <type>Date</type>
</CustomField>