force-app/main/default/objects/eCard_Part_Shortage__x/fields/eCard_Discrepancy_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>eCard_Discrepancy_Log_Id__c</fullName>
    <description>eCard_Discrepancy_Log_Id</description>
    <externalDeveloperName>eCard_Discrepancy_Log_Id</externalDeveloperName>
    <label>eCard_Discrepancy_Log_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>