force-app/main/default/objects/eCard_Part_Shortage__x/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End_Date</description>
    <externalDeveloperName>End_Date</externalDeveloperName>
    <label>End_Date</label>
    <type>Date</type>
</CustomField>