force-app/main/default/objects/eCard_Part_Shortage__x/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>ETA</description>
    <externalDeveloperName>ETA</externalDeveloperName>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>