force-app/main/default/objects/eCard_Part_Shortage__x/fields/IO_Program__c.field-meta.xml
<CustomField>
    <fullName>IO_Program__c</fullName>
    <description>IO_Program</description>
    <externalDeveloperName>IO_Program</externalDeveloperName>
    <label>IO_Program</label>
    <length>200</length>
    <type>Text</type>
</CustomField>