force-app/main/default/objects/eCard_Part_Shortage__x/fields/is_B_Whs_Kit__c.field-meta.xml
<CustomField>
    <fullName>is_B_Whs_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is_B_Whs_Kit</description>
    <externalDeveloperName>is_B_Whs_Kit</externalDeveloperName>
    <label>is_B_Whs_Kit</label>
    <type>Checkbox</type>
</CustomField>