force-app/main/default/objects/eCard_Part_Shortage__x/fields/is_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>is_Long_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is_Long_Term</description>
    <externalDeveloperName>is_Long_Term</externalDeveloperName>
    <label>is_Long_Term</label>
    <type>Checkbox</type>
</CustomField>