force-app/main/default/objects/eCard_Part_Shortage__x/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <description>Last_Modified_By</description>
    <externalDeveloperName>Last_Modified_By</externalDeveloperName>
    <label>Last_Modified_By</label>
    <length>254</length>
    <type>Text</type>
</CustomField>