force-app/main/default/objects/eCard_Part_Shortage__x/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Last_Modified_Date</description>
    <externalDeveloperName>Last_Modified_Date</externalDeveloperName>
    <label>Last_Modified_Date</label>
    <type>DateTime</type>
</CustomField>