force-app/main/default/objects/eCard_Part_Shortage__x/fields/Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Description__c</fullName>
    <description>Part_Description</description>
    <externalDeveloperName>Part_Description</externalDeveloperName>
    <label>Part_Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>