force-app/main/default/objects/eCard_Part_Shortage__x/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>Part_Number</description>
    <externalDeveloperName>Part_Number</externalDeveloperName>
    <label>Part_Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>