force-app/main/default/objects/eCard_Part_Shortage__x/fields/Planner_Code__c.field-meta.xml
<CustomField>
    <fullName>Planner_Code__c</fullName>
    <description>Planner_Code</description>
    <externalDeveloperName>Planner_Code</externalDeveloperName>
    <label>Planner_Code</label>
    <length>254</length>
    <type>Text</type>
</CustomField>