force-app/main/default/objects/eCard_Part_Shortage__x/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>PO_Number</description>
    <externalDeveloperName>PO_Number</externalDeveloperName>
    <label>PO_Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>