force-app/main/default/objects/eCard_Part_Shortage__x/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Product_Category</description>
    <externalDeveloperName>Product_Category</externalDeveloperName>
    <label>Product_Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>