force-app/main/default/objects/eCard_Part_Shortage__x/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product_Code</description>
    <externalDeveloperName>Product_Code</externalDeveloperName>
    <label>Product_Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>