force-app/main/default/objects/eCard_Part_Shortage__x/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity</description>
    <externalDeveloperName>Quantity</externalDeveloperName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>