force-app/main/default/objects/eCard_Part_Shortage__x/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <description>Resolved_By</description>
    <externalDeveloperName>Resolved_By</externalDeveloperName>
    <label>Resolved_By</label>
    <length>254</length>
    <type>Text</type>
</CustomField>