force-app/main/default/objects/eCard_Part_Shortage__x/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Resolved_Date</description>
    <externalDeveloperName>Resolved_Date</externalDeveloperName>
    <label>Resolved_Date</label>
    <type>DateTime</type>
</CustomField>