force-app/main/default/objects/eCard_Part_Shortage__x/fields/Ship_Short__c.field-meta.xml
<CustomField>
    <fullName>Ship_Short__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ship_Short</description>
    <externalDeveloperName>Ship_Short</externalDeveloperName>
    <label>Ship_Short</label>
    <type>Checkbox</type>
</CustomField>