force-app/main/default/objects/eCard_Part_Shortage__x/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking_Number</description>
    <externalDeveloperName>Tracking_Number</externalDeveloperName>
    <label>Tracking_Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>