force-app/main/default/objects/eCard_Part_Shortage__x/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Vendor_Name</description>
    <externalDeveloperName>Vendor_Name</externalDeveloperName>
    <label>Vendor_Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>