force-app/main/default/objects/eCard_Part_Shortage__x/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <description>Vendor_Number</description>
    <externalDeveloperName>Vendor_Number</externalDeveloperName>
    <label>Vendor_Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>