force-app/main/default/objects/eCard_Part_Shortage__x/fields/Workcenter__c.field-meta.xml
<CustomField>
    <fullName>Workcenter__c</fullName>
    <description>Workcenter</description>
    <externalDeveloperName>Workcenter</externalDeveloperName>
    <label>Workcenter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>